byacc/y.output
   0  $accept : programa $end

   1  programa : sent_declarativa sent_ejecutable

   2  sent_declarativa : sent_declarativa declaracion
   3                   |

   4  declaracion : tipo_dato lista_variables ';'
   5              | IDENTIFICADOR '[' ENTERO PUNTO_PUNTO ENTERO ']' PR_VECTOR PR_DE tipo_dato ';'
   6              | declaracion_invalida

   7  declaracion_invalida : tipo_dato error ';'

   8  $$1 :

   9  declaracion_invalida : IDENTIFICADOR '[' error ']' $$1 PR_VECTOR PR_DE tipo_dato ';'
  10                       | IDENTIFICADOR '[' ENTERO PUNTO_PUNTO ENTERO ']' error ';'

  11  lista_variables : IDENTIFICADOR
  12                  | lista_variables ',' IDENTIFICADOR

  13  tipo_dato : PR_ENTERO
  14            | PR_ENTERO_LSS

  15  sent_ejecutable : sentencia_valida
  16                  | sent_ejecutable sentencia

  17  $$2 :

  18  sentencia_valida : $$2 seleccion

  19  $$3 :

  20  sentencia_valida : $$3 iteracion

  21  $$4 :

  22  sentencia_valida : $$4 impresion
  23                   | asignacion
  24                   | PR_SINO bloque
  25                   | error ';'

  26  sentencia : sentencia_valida
  27            | declaracion

  28  seleccion : PR_SI '(' condicion ')' PR_ENTONCES bloque

  29  $$5 :

  30  seleccion : PR_SI '(' condicion ')' PR_ENTONCES bloque PR_SINO $$5 bloque
  31            | seleccion_invalida

  32  $$6 :

  33  seleccion_invalida : PR_SI $$6 condicion ')' PR_ENTONCES bloque

  34  $$7 :

  35  seleccion_invalida : PR_SI '(' condicion $$7 PR_ENTONCES bloque

  36  $$8 :

  37  seleccion_invalida : PR_SI '(' error ')' $$8 PR_ENTONCES bloque
  38                     | PR_SI '(' condicion ')' error bloque
  39                     | PR_SI error bloque

  40  iteracion : PR_ITERAR bloque PR_HASTA condicion ';'
  41            | iteracion_invalida

  42  $$9 :

  43  iteracion_invalida : PR_ITERAR $$9 PR_HASTA condicion ';'
  44                     | PR_ITERAR bloque condicion ';'
  45                     | PR_ITERAR bloque PR_HASTA error ';'

  46  impresion : PR_IMPRIMIR '(' CADENA_MULTILINEA ')' ';'
  47            | impresion_invalida

  48  $$10 :

  49  impresion_invalida : PR_IMPRIMIR $$10 CADENA_MULTILINEA error ';'

  50  $$11 :

  51  impresion_invalida : PR_IMPRIMIR '(' ')' $$11 ';'

  52  $$12 :

  53  impresion_invalida : PR_IMPRIMIR '(' CADENA_MULTILINEA $$12 ';'
  54                     | PR_IMPRIMIR '(' error ')' ';'
  55                     | PR_IMPRIMIR ';'

  56  $$13 :

  57  asignacion : asignable ASIGNACION $$13 e ';'
  58             | asignacion_invalida

  59  asignacion_invalida : asignable ASIGNACION error ';'
  60                      | ASIGNACION error ';'

  61  bloque : sentencia
  62         | '{' sent_ejecutable '}'

  63  $$14 :

  64  bloque : '{' declaracion $$14 sent_declarativa sent_ejecutable '}'
  65         | '{' '}'

  66  $$15 :

  67  condicion : e comparador $$15 e

  68  comparador : '>'
  69             | COMP_MAYOR_IGUAL
  70             | '<'
  71             | COMP_MENOR_IGUAL
  72             | '='
  73             | COMP_DISTINTO

  74  e : e '+' t
  75    | e '-' t
  76    | t

  77  t : t '*' f
  78    | t '/' f
  79    | f

  80  f : valor
  81    | '-' ENTERO
  82    | '-' ENTERO_LSS
  83    | FUERA_RANGO

  84  valor : asignable
  85        | ENTERO
  86        | ENTERO_LSS

  87  asignable : IDENTIFICADOR
  88            | IDENTIFICADOR '[' e ']'

state 0
	$accept : . programa $end  (0)
	sent_declarativa : .  (3)

	.  reduce 3

	programa  goto 1
	sent_declarativa  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : sent_declarativa . sent_ejecutable  (1)
	sent_declarativa : sent_declarativa . declaracion  (2)
	$$2 : .  (17)
	$$3 : .  (19)
	$$4 : .  (21)

	error  shift 3
	IDENTIFICADOR  shift 4
	PR_SINO  shift 5
	PR_ENTERO  shift 6
	PR_ENTERO_LSS  shift 7
	ASIGNACION  shift 8
	PR_SI  reduce 17
	PR_IMPRIMIR  reduce 21
	PR_ITERAR  reduce 19

	sent_ejecutable  goto 9
	declaracion  goto 10
	tipo_dato  goto 11
	declaracion_invalida  goto 12
	sentencia_valida  goto 13
	$$2  goto 14
	$$3  goto 15
	$$4  goto 16
	asignacion  goto 17
	asignable  goto 18
	asignacion_invalida  goto 19


state 3
	sentencia_valida : error . ';'  (25)

	';'  shift 20
	.  error


state 4
	declaracion : IDENTIFICADOR . '[' ENTERO PUNTO_PUNTO ENTERO ']' PR_VECTOR PR_DE tipo_dato ';'  (5)
	declaracion_invalida : IDENTIFICADOR . '[' error ']' $$1 PR_VECTOR PR_DE tipo_dato ';'  (9)
	declaracion_invalida : IDENTIFICADOR . '[' ENTERO PUNTO_PUNTO ENTERO ']' error ';'  (10)
	asignable : IDENTIFICADOR .  (87)
	asignable : IDENTIFICADOR . '[' e ']'  (88)

	'['  shift 21
	ASIGNACION  reduce 87


state 5
	sentencia_valida : PR_SINO . bloque  (24)
	$$2 : .  (17)
	$$3 : .  (19)
	$$4 : .  (21)

	error  shift 3
	IDENTIFICADOR  shift 4
	PR_SINO  shift 5
	PR_ENTERO  shift 6
	PR_ENTERO_LSS  shift 7
	ASIGNACION  shift 8
	'{'  shift 22
	PR_SI  reduce 17
	PR_IMPRIMIR  reduce 21
	PR_ITERAR  reduce 19

	declaracion  goto 23
	tipo_dato  goto 11
	declaracion_invalida  goto 12
	sentencia_valida  goto 24
	sentencia  goto 25
	$$2  goto 14
	$$3  goto 15
	$$4  goto 16
	asignacion  goto 17
	bloque  goto 26
	asignable  goto 18
	asignacion_invalida  goto 19


state 6
	tipo_dato : PR_ENTERO .  (13)

	.  reduce 13


state 7
	tipo_dato : PR_ENTERO_LSS .  (14)

	.  reduce 14


state 8
	asignacion_invalida : ASIGNACION . error ';'  (60)

	error  shift 27
	.  error


state 9
	programa : sent_declarativa sent_ejecutable .  (1)
	sent_ejecutable : sent_ejecutable . sentencia  (16)
	$$2 : .  (17)
	$$3 : .  (19)
	$$4 : .  (21)

	error  shift 3
	IDENTIFICADOR  shift 4
	PR_SINO  shift 5
	PR_ENTERO  shift 6
	PR_ENTERO_LSS  shift 7
	ASIGNACION  shift 8
	$end  reduce 1
	PR_SI  reduce 17
	PR_IMPRIMIR  reduce 21
	PR_ITERAR  reduce 19

	declaracion  goto 23
	tipo_dato  goto 11
	declaracion_invalida  goto 12
	sentencia_valida  goto 24
	sentencia  goto 28
	$$2  goto 14
	$$3  goto 15
	$$4  goto 16
	asignacion  goto 17
	asignable  goto 18
	asignacion_invalida  goto 19


state 10
	sent_declarativa : sent_declarativa declaracion .  (2)

	.  reduce 2


state 11
	declaracion : tipo_dato . lista_variables ';'  (4)
	declaracion_invalida : tipo_dato . error ';'  (7)

	error  shift 29
	IDENTIFICADOR  shift 30
	.  error

	lista_variables  goto 31


state 12
	declaracion : declaracion_invalida .  (6)

	.  reduce 6


state 13
	sent_ejecutable : sentencia_valida .  (15)

	.  reduce 15


state 14
	sentencia_valida : $$2 . seleccion  (18)

	PR_SI  shift 32
	.  error

	seleccion  goto 33
	seleccion_invalida  goto 34


state 15
	sentencia_valida : $$3 . iteracion  (20)

	PR_ITERAR  shift 35
	.  error

	iteracion  goto 36
	iteracion_invalida  goto 37


state 16
	sentencia_valida : $$4 . impresion  (22)

	PR_IMPRIMIR  shift 38
	.  error

	impresion  goto 39
	impresion_invalida  goto 40


state 17
	sentencia_valida : asignacion .  (23)

	.  reduce 23


state 18
	asignacion : asignable . ASIGNACION $$13 e ';'  (57)
	asignacion_invalida : asignable . ASIGNACION error ';'  (59)

	ASIGNACION  shift 41
	.  error


state 19
	asignacion : asignacion_invalida .  (58)

	.  reduce 58


state 20
	sentencia_valida : error ';' .  (25)

	.  reduce 25


state 21
	declaracion : IDENTIFICADOR '[' . ENTERO PUNTO_PUNTO ENTERO ']' PR_VECTOR PR_DE tipo_dato ';'  (5)
	declaracion_invalida : IDENTIFICADOR '[' . error ']' $$1 PR_VECTOR PR_DE tipo_dato ';'  (9)
	declaracion_invalida : IDENTIFICADOR '[' . ENTERO PUNTO_PUNTO ENTERO ']' error ';'  (10)
	asignable : IDENTIFICADOR '[' . e ']'  (88)

	error  shift 42
	IDENTIFICADOR  shift 43
	ENTERO  shift 44
	ENTERO_LSS  shift 45
	FUERA_RANGO  shift 46
	'-'  shift 47
	.  error

	asignable  goto 48
	e  goto 49
	t  goto 50
	f  goto 51
	valor  goto 52


state 22
	bloque : '{' . sent_ejecutable '}'  (62)
	bloque : '{' . declaracion $$14 sent_declarativa sent_ejecutable '}'  (64)
	bloque : '{' . '}'  (65)
	$$2 : .  (17)
	$$3 : .  (19)
	$$4 : .  (21)

	error  shift 3
	IDENTIFICADOR  shift 4
	PR_SINO  shift 5
	PR_ENTERO  shift 6
	PR_ENTERO_LSS  shift 7
	ASIGNACION  shift 8
	'}'  shift 53
	PR_SI  reduce 17
	PR_IMPRIMIR  reduce 21
	PR_ITERAR  reduce 19

	sent_ejecutable  goto 54
	declaracion  goto 55
	tipo_dato  goto 11
	declaracion_invalida  goto 12
	sentencia_valida  goto 13
	$$2  goto 14
	$$3  goto 15
	$$4  goto 16
	asignacion  goto 17
	asignable  goto 18
	asignacion_invalida  goto 19


state 23
	sentencia : declaracion .  (27)

	.  reduce 27


state 24
	sentencia : sentencia_valida .  (26)

	.  reduce 26


state 25
	bloque : sentencia .  (61)

	.  reduce 61


state 26
	sentencia_valida : PR_SINO bloque .  (24)

	.  reduce 24


state 27
	asignacion_invalida : ASIGNACION error . ';'  (60)

	';'  shift 56
	.  error


state 28
	sent_ejecutable : sent_ejecutable sentencia .  (16)

	.  reduce 16


state 29
	declaracion_invalida : tipo_dato error . ';'  (7)

	';'  shift 57
	.  error


state 30
	lista_variables : IDENTIFICADOR .  (11)

	.  reduce 11


state 31
	declaracion : tipo_dato lista_variables . ';'  (4)
	lista_variables : lista_variables . ',' IDENTIFICADOR  (12)

	';'  shift 58
	','  shift 59
	.  error


state 32
	seleccion : PR_SI . '(' condicion ')' PR_ENTONCES bloque  (28)
	seleccion : PR_SI . '(' condicion ')' PR_ENTONCES bloque PR_SINO $$5 bloque  (30)
	seleccion_invalida : PR_SI . $$6 condicion ')' PR_ENTONCES bloque  (33)
	seleccion_invalida : PR_SI . '(' condicion $$7 PR_ENTONCES bloque  (35)
	seleccion_invalida : PR_SI . '(' error ')' $$8 PR_ENTONCES bloque  (37)
	seleccion_invalida : PR_SI . '(' condicion ')' error bloque  (38)
	seleccion_invalida : PR_SI . error bloque  (39)
	$$6 : .  (32)

	error  shift 60
	'('  shift 61
	IDENTIFICADOR  reduce 32
	ENTERO  reduce 32
	ENTERO_LSS  reduce 32
	FUERA_RANGO  reduce 32
	'-'  reduce 32

	$$6  goto 62


state 33
	sentencia_valida : $$2 seleccion .  (18)

	.  reduce 18


state 34
	seleccion : seleccion_invalida .  (31)

	.  reduce 31


state 35
	iteracion : PR_ITERAR . bloque PR_HASTA condicion ';'  (40)
	iteracion_invalida : PR_ITERAR . $$9 PR_HASTA condicion ';'  (43)
	iteracion_invalida : PR_ITERAR . bloque condicion ';'  (44)
	iteracion_invalida : PR_ITERAR . bloque PR_HASTA error ';'  (45)
	$$2 : .  (17)
	$$3 : .  (19)
	$$4 : .  (21)
	$$9 : .  (42)

	error  shift 3
	IDENTIFICADOR  shift 4
	PR_SINO  shift 5
	PR_ENTERO  shift 6
	PR_ENTERO_LSS  shift 7
	ASIGNACION  shift 8
	'{'  shift 22
	PR_SI  reduce 17
	PR_IMPRIMIR  reduce 21
	PR_ITERAR  reduce 19
	PR_HASTA  reduce 42

	declaracion  goto 23
	tipo_dato  goto 11
	declaracion_invalida  goto 12
	sentencia_valida  goto 24
	sentencia  goto 25
	$$2  goto 14
	$$3  goto 15
	$$4  goto 16
	asignacion  goto 17
	bloque  goto 63
	$$9  goto 64
	asignable  goto 18
	asignacion_invalida  goto 19


state 36
	sentencia_valida : $$3 iteracion .  (20)

	.  reduce 20


state 37
	iteracion : iteracion_invalida .  (41)

	.  reduce 41


state 38
	impresion : PR_IMPRIMIR . '(' CADENA_MULTILINEA ')' ';'  (46)
	impresion_invalida : PR_IMPRIMIR . $$10 CADENA_MULTILINEA error ';'  (49)
	impresion_invalida : PR_IMPRIMIR . '(' ')' $$11 ';'  (51)
	impresion_invalida : PR_IMPRIMIR . '(' CADENA_MULTILINEA $$12 ';'  (53)
	impresion_invalida : PR_IMPRIMIR . '(' error ')' ';'  (54)
	impresion_invalida : PR_IMPRIMIR . ';'  (55)
	$$10 : .  (48)

	';'  shift 65
	'('  shift 66
	CADENA_MULTILINEA  reduce 48

	$$10  goto 67


state 39
	sentencia_valida : $$4 impresion .  (22)

	.  reduce 22


state 40
	impresion : impresion_invalida .  (47)

	.  reduce 47


state 41
	asignacion : asignable ASIGNACION . $$13 e ';'  (57)
	asignacion_invalida : asignable ASIGNACION . error ';'  (59)
	$$13 : .  (56)

	error  shift 68
	IDENTIFICADOR  reduce 56
	ENTERO  reduce 56
	ENTERO_LSS  reduce 56
	FUERA_RANGO  reduce 56
	'-'  reduce 56

	$$13  goto 69


state 42
	declaracion_invalida : IDENTIFICADOR '[' error . ']' $$1 PR_VECTOR PR_DE tipo_dato ';'  (9)

	']'  shift 70
	.  error


state 43
	asignable : IDENTIFICADOR .  (87)
	asignable : IDENTIFICADOR . '[' e ']'  (88)

	'['  shift 71
	PR_ENTONCES  reduce 87
	COMP_MAYOR_IGUAL  reduce 87
	COMP_MENOR_IGUAL  reduce 87
	COMP_DISTINTO  reduce 87
	';'  reduce 87
	']'  reduce 87
	')'  reduce 87
	'>'  reduce 87
	'<'  reduce 87
	'='  reduce 87
	'+'  reduce 87
	'-'  reduce 87
	'*'  reduce 87
	'/'  reduce 87


state 44
	declaracion : IDENTIFICADOR '[' ENTERO . PUNTO_PUNTO ENTERO ']' PR_VECTOR PR_DE tipo_dato ';'  (5)
	declaracion_invalida : IDENTIFICADOR '[' ENTERO . PUNTO_PUNTO ENTERO ']' error ';'  (10)
	valor : ENTERO .  (85)

	PUNTO_PUNTO  shift 72
	']'  reduce 85
	'+'  reduce 85
	'-'  reduce 85
	'*'  reduce 85
	'/'  reduce 85


state 45
	valor : ENTERO_LSS .  (86)

	.  reduce 86


state 46
	f : FUERA_RANGO .  (83)

	.  reduce 83


state 47
	f : '-' . ENTERO  (81)
	f : '-' . ENTERO_LSS  (82)

	ENTERO  shift 73
	ENTERO_LSS  shift 74
	.  error


state 48
	valor : asignable .  (84)

	.  reduce 84


state 49
	e : e . '+' t  (74)
	e : e . '-' t  (75)
	asignable : IDENTIFICADOR '[' e . ']'  (88)

	']'  shift 75
	'+'  shift 76
	'-'  shift 77
	.  error


state 50
	e : t .  (76)
	t : t . '*' f  (77)
	t : t . '/' f  (78)

	'*'  shift 78
	'/'  shift 79
	PR_ENTONCES  reduce 76
	COMP_MAYOR_IGUAL  reduce 76
	COMP_MENOR_IGUAL  reduce 76
	COMP_DISTINTO  reduce 76
	';'  reduce 76
	']'  reduce 76
	')'  reduce 76
	'>'  reduce 76
	'<'  reduce 76
	'='  reduce 76
	'+'  reduce 76
	'-'  reduce 76


state 51
	t : f .  (79)

	.  reduce 79


state 52
	f : valor .  (80)

	.  reduce 80


state 53
	bloque : '{' '}' .  (65)

	.  reduce 65


state 54
	sent_ejecutable : sent_ejecutable . sentencia  (16)
	bloque : '{' sent_ejecutable . '}'  (62)
	$$2 : .  (17)
	$$3 : .  (19)
	$$4 : .  (21)

	error  shift 3
	IDENTIFICADOR  shift 4
	PR_SINO  shift 5
	PR_ENTERO  shift 6
	PR_ENTERO_LSS  shift 7
	ASIGNACION  shift 8
	'}'  shift 80
	PR_SI  reduce 17
	PR_IMPRIMIR  reduce 21
	PR_ITERAR  reduce 19

	declaracion  goto 23
	tipo_dato  goto 11
	declaracion_invalida  goto 12
	sentencia_valida  goto 24
	sentencia  goto 28
	$$2  goto 14
	$$3  goto 15
	$$4  goto 16
	asignacion  goto 17
	asignable  goto 18
	asignacion_invalida  goto 19


state 55
	bloque : '{' declaracion . $$14 sent_declarativa sent_ejecutable '}'  (64)
	$$14 : .  (63)

	.  reduce 63

	$$14  goto 81


state 56
	asignacion_invalida : ASIGNACION error ';' .  (60)

	.  reduce 60


state 57
	declaracion_invalida : tipo_dato error ';' .  (7)

	.  reduce 7


state 58
	declaracion : tipo_dato lista_variables ';' .  (4)

	.  reduce 4


state 59
	lista_variables : lista_variables ',' . IDENTIFICADOR  (12)

	IDENTIFICADOR  shift 82
	.  error


state 60
	seleccion_invalida : PR_SI error . bloque  (39)
	$$2 : .  (17)
	$$3 : .  (19)
	$$4 : .  (21)

	error  shift 3
	IDENTIFICADOR  shift 4
	PR_SINO  shift 5
	PR_ENTERO  shift 6
	PR_ENTERO_LSS  shift 7
	ASIGNACION  shift 8
	'{'  shift 22
	PR_SI  reduce 17
	PR_IMPRIMIR  reduce 21
	PR_ITERAR  reduce 19

	declaracion  goto 23
	tipo_dato  goto 11
	declaracion_invalida  goto 12
	sentencia_valida  goto 24
	sentencia  goto 25
	$$2  goto 14
	$$3  goto 15
	$$4  goto 16
	asignacion  goto 17
	bloque  goto 83
	asignable  goto 18
	asignacion_invalida  goto 19


state 61
	seleccion : PR_SI '(' . condicion ')' PR_ENTONCES bloque  (28)
	seleccion : PR_SI '(' . condicion ')' PR_ENTONCES bloque PR_SINO $$5 bloque  (30)
	seleccion_invalida : PR_SI '(' . condicion $$7 PR_ENTONCES bloque  (35)
	seleccion_invalida : PR_SI '(' . error ')' $$8 PR_ENTONCES bloque  (37)
	seleccion_invalida : PR_SI '(' . condicion ')' error bloque  (38)

	error  shift 84
	IDENTIFICADOR  shift 43
	ENTERO  shift 85
	ENTERO_LSS  shift 45
	FUERA_RANGO  shift 46
	'-'  shift 47
	.  error

	condicion  goto 86
	asignable  goto 48
	e  goto 87
	t  goto 50
	f  goto 51
	valor  goto 52


state 62
	seleccion_invalida : PR_SI $$6 . condicion ')' PR_ENTONCES bloque  (33)

	IDENTIFICADOR  shift 43
	ENTERO  shift 85
	ENTERO_LSS  shift 45
	FUERA_RANGO  shift 46
	'-'  shift 47
	.  error

	condicion  goto 88
	asignable  goto 48
	e  goto 87
	t  goto 50
	f  goto 51
	valor  goto 52


state 63
	iteracion : PR_ITERAR bloque . PR_HASTA condicion ';'  (40)
	iteracion_invalida : PR_ITERAR bloque . condicion ';'  (44)
	iteracion_invalida : PR_ITERAR bloque . PR_HASTA error ';'  (45)

	IDENTIFICADOR  shift 43
	ENTERO  shift 85
	ENTERO_LSS  shift 45
	PR_HASTA  shift 89
	FUERA_RANGO  shift 46
	'-'  shift 47
	.  error

	condicion  goto 90
	asignable  goto 48
	e  goto 87
	t  goto 50
	f  goto 51
	valor  goto 52


state 64
	iteracion_invalida : PR_ITERAR $$9 . PR_HASTA condicion ';'  (43)

	PR_HASTA  shift 91
	.  error


state 65
	impresion_invalida : PR_IMPRIMIR ';' .  (55)

	.  reduce 55


state 66
	impresion : PR_IMPRIMIR '(' . CADENA_MULTILINEA ')' ';'  (46)
	impresion_invalida : PR_IMPRIMIR '(' . ')' $$11 ';'  (51)
	impresion_invalida : PR_IMPRIMIR '(' . CADENA_MULTILINEA $$12 ';'  (53)
	impresion_invalida : PR_IMPRIMIR '(' . error ')' ';'  (54)

	error  shift 92
	CADENA_MULTILINEA  shift 93
	')'  shift 94
	.  error


state 67
	impresion_invalida : PR_IMPRIMIR $$10 . CADENA_MULTILINEA error ';'  (49)

	CADENA_MULTILINEA  shift 95
	.  error


state 68
	asignacion_invalida : asignable ASIGNACION error . ';'  (59)

	';'  shift 96
	.  error


state 69
	asignacion : asignable ASIGNACION $$13 . e ';'  (57)

	IDENTIFICADOR  shift 43
	ENTERO  shift 85
	ENTERO_LSS  shift 45
	FUERA_RANGO  shift 46
	'-'  shift 47
	.  error

	asignable  goto 48
	e  goto 97
	t  goto 50
	f  goto 51
	valor  goto 52


state 70
	declaracion_invalida : IDENTIFICADOR '[' error ']' . $$1 PR_VECTOR PR_DE tipo_dato ';'  (9)
	$$1 : .  (8)

	.  reduce 8

	$$1  goto 98


state 71
	asignable : IDENTIFICADOR '[' . e ']'  (88)

	IDENTIFICADOR  shift 43
	ENTERO  shift 85
	ENTERO_LSS  shift 45
	FUERA_RANGO  shift 46
	'-'  shift 47
	.  error

	asignable  goto 48
	e  goto 49
	t  goto 50
	f  goto 51
	valor  goto 52


state 72
	declaracion : IDENTIFICADOR '[' ENTERO PUNTO_PUNTO . ENTERO ']' PR_VECTOR PR_DE tipo_dato ';'  (5)
	declaracion_invalida : IDENTIFICADOR '[' ENTERO PUNTO_PUNTO . ENTERO ']' error ';'  (10)

	ENTERO  shift 99
	.  error


state 73
	f : '-' ENTERO .  (81)

	.  reduce 81


state 74
	f : '-' ENTERO_LSS .  (82)

	.  reduce 82


state 75
	asignable : IDENTIFICADOR '[' e ']' .  (88)

	.  reduce 88


state 76
	e : e '+' . t  (74)

	IDENTIFICADOR  shift 43
	ENTERO  shift 85
	ENTERO_LSS  shift 45
	FUERA_RANGO  shift 46
	'-'  shift 47
	.  error

	asignable  goto 48
	t  goto 100
	f  goto 51
	valor  goto 52


state 77
	e : e '-' . t  (75)

	IDENTIFICADOR  shift 43
	ENTERO  shift 85
	ENTERO_LSS  shift 45
	FUERA_RANGO  shift 46
	'-'  shift 47
	.  error

	asignable  goto 48
	t  goto 101
	f  goto 51
	valor  goto 52


state 78
	t : t '*' . f  (77)

	IDENTIFICADOR  shift 43
	ENTERO  shift 85
	ENTERO_LSS  shift 45
	FUERA_RANGO  shift 46
